[package]
name = "vpnproject"
version = "0.1.0"
edition = "2024"

[dependencies]
tun = "0.6"
chacha20poly1305 = "0.10"
etherparse = "0.19.0"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"